css/team.css
@import url("fonts.css");

.main-head {
    position: relative;
    background: url("../assets/imgs/team.svg");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-size: cover;

    height: 100%;
    width: auto;
}

.palette-bg-green {
    background-color: #4db6ac;
}

.palette-bg-red {
    background-color: #dd5e58;
}

.palette-bg-blue {
    background-color: #3b6fc1;
}

.palette-bg-grey {
    background-color: #ebebeb;
}

.photo-name {
    font-size: 1rem;
    /* slightly black text */
    color: rgb(25, 25, 25);
}
.imagea {
    position:relative;
    display:inline-block;
 }




.team-member {
    display: inline-block;
    text-align: center;
    width: 24%;
}

.team-members {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: flex-start;
    flex-wrap: wrap;
}



.algn{
    text-align: center;
}

.algn .row .col-12 {
    margin: 0 auto;
}

.grid {
    position: relative;
    padding-right: 10px;
    padding-left:10px;
    max-width: 1000px;
    list-style: none;
    text-align: center;
}

/* Common style */
@media (max-width:950px),(min-width:1501px){
    .grid figure {
        position: relative;
        float: left;
        overflow: hidden;
        margin: 10px 1%;
        min-width: 360px;
        max-width: 360px;
        max-height: 360px;
        width: auto;
        text-align: center;
        cursor: pointer;
    }

    .grid figure img {
        filter: grayscale(0%);
        position: relative;
        display: block;
        width: 100%;
        height: 100%;
        min-height: 360px;
        opacity: 1;
        object-fit: cover;
    }
    .grid figure figcaption{
        font-size: 1.25em;
    }
}
@media (min-width:951px) and (max-width:1500px){
    .grid figure {
        position: relative;
        float: left;
        overflow: hidden;
        margin: 10px 1%;
        min-width: 300px;
        max-width: 300px;
        max-height: 300px;
        width: auto;
        text-align: center;
        cursor: pointer;
    }
    
    .grid figure img {
        filter: grayscale(0%);
        position: relative;
        display: block;
        width: 100%;
        height: 100%;
        min-height: 300px;
        opacity: 1;
        object-fit: cover;
    }
    .grid figure figcaption{
        font-size: 1em;
    }
    .grid figure h2{
        font-size: 1.5em;
    }
    .grid figure i{
        font-size: 0.75em;
    }
}
.grid figure figcaption {
    padding: 2em;
    color: #fff;
    text-transform: uppercase;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.grid figure figcaption::before,
.grid figure figcaption::after {
    pointer-events: none;
}

.grid figure figcaption{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.grid figure h2 {
    word-spacing: -0.15em;
    font-weight: 300;
}

.grid figure h2 span {
    font-weight: 800;
}

.grid figure a{
    display: inline-block;
    color: white;   
}
.grid figure h2,
.grid figure p {
    margin: 0;
}

.grid figure p {
    color: black;
    letter-spacing: 1px;
    font-size: 68.5%;   
}

figure.effect-layla img {
    width: 100%;
    height: 100%;
    transition: transform 0.35s ease;
}
figure.effect-layla figcaption{
    padding: 3rem;
}

figure.effect-layla figcaption h2{
    color: black;
}

figure.effect-layla figcaption::before,
figure.effect-layla figcaption::after {
    position: absolute;
    content: '';
    opacity: 0;
}

figure.effect-layla figcaption::before {
    top: 50px;
    right: 30px;
    bottom: 50px;
    left: 30px;
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
    -webkit-transform: scale(0,1);
    transform: scale(0,1);
    -webkit-transform-origin: 0 0;
    transform-origin: 0 0;
}

figure.effect-layla figcaption::after {
    top: 30px;
    right: 50px;
    bottom: 30px;
    left: 50px;
    border-right: 1px solid #fff;
    border-left: 1px solid #fff;
    -webkit-transform: scale(1,0);
    transform: scale(1,0);
    -webkit-transform-origin: 100% 0;
    transform-origin: 100% 0;
}

figure.effect-layla h2 {
    opacity: 0;
    padding-top: 20%;
    -webkit-transition: -webkit-transform 0.35s;
    transition: transform 0.35s;
}
figure.effect-layla:hover h2{
    opacity: 1;
    transition: 0.5s;
}
figure.effect-layla p {
    padding: 0.5em 2em;
    text-transform: none;
    opacity: 0;
}
figure.effect-layla a {
    padding-right: 5px;
    text-transform: none;
    opacity: 0;
}

figure.effect-layla img,
figure.effect-layla figcaption::before,
figure.effect-layla figcaption::after,
figure.effect-layla p, figure.effect-layla a {
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
}

figure.effect-layla:hover img {
    opacity: 0.5;
    filter: grayscale(90%);
    transform: scale(1.1);
    transition: 0.5s;
}

figure.effect-layla:hover figcaption::before,
figure.effect-layla:hover figcaption::after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

figure.effect-layla:hover h2,
figure.effect-layla:hover p, figure.effect-layla:hover a {
    opacity: 1;
}

figure.effect-layla:hover figcaption::after,
figure.effect-layla:hover h2,
figure.effect-layla:hover p,
figure.effect-layla:hover a,
figure.effect-layla:hover img {
    -webkit-transition-delay: 0.15s;
    transition-delay: 0.15s;
}

.focus{
    color:white
}
.focus:hover{
    color: black;
}

i.fab, i.fa {
    color: black;
}

i.fab:hover, i.fa:hover {
    color: #444;
}

@media (max-width: 420px) {
    .col-12, .algn.container {
        padding-left: 0;
        padding-right: 0;
    }

    .grid figure {
        min-width: 90vw;
        width: 100%;
        margin: auto;
        margin-bottom: 2vw;
    }

    .grid figure img {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    figure.effect-layla figcaption{
        padding: 1rem;
    }
}

